--- a/evenements/actus.html
+++ b/evenements/actus.html
@@ -141,7 +141,7 @@
                                         <a href="#">Evènement d'intégration ouvert à tous !</a>
                                     </h5>
                                     <p class="excerpt mb-0">
-                                        Rendez vous à la Plage de Monsieur Hulot Saint-Marc à partir de 14h30!
+                                        Rendez vous à <a href="https://goo.gl/maps/kre7WSdY8FMGnqW47" target="_blank" style="color: #292c2f; text-decoration: underline;">la Plage de Monsieur Hulot Saint-Marc</a> à partir de 14h30!
                                     </p>
                                 </div>
 
@@ -171,7 +171,7 @@
                                         <a href="#">Evènement d'intégration ouvert à tous !</a>
                                     </h5>
                                     <p class="excerpt mb-0">
-                                        Rendez vous à la Plage de Monsieur Hulot Saint-Marc à partir de 14h30!
+                                        Rendez vous à <a href="https://goo.gl/maps/kre7WSdY8FMGnqW47" target="_blank" style="color: #292c2f; text-decoration: underline;">la Plage de Monsieur Hulot Saint-Marc</a> à partir de 14h30!
                                     </p>
                                 </div>
 
@@ -201,7 +201,7 @@
                                         <a href="#">Evènement d'intégration ouvert à tous !</a>
                                     </h5>
                                     <p class="excerpt mb-0">
-                                        Rendez vous à la Plage de Monsieur Hulot Saint-Marc à partir de 14h30!
+                                        Rendez vous à <a href="https://goo.gl/maps/kre7WSdY8FMGnqW47" target="_blank" style="color: #292c2f; text-decoration: underline;">la Plage de Monsieur Hulot Saint-Marc</a> à partir de 14h30!
                                     </p>
                                 </div>
 
@@ -231,7 +231,7 @@
                                         <a href="#">Evènement d'intégration ouvert à tous !</a>
                                     </h5>
                                     <p class="excerpt mb-0">
-                                        Rendez vous à la Plage de Monsieur Hulot Saint-Marc à partir de 14h30!
+                                        Rendez vous à <a href="https://goo.gl/maps/kre7WSdY8FMGnqW47" target="_blank" style="color: #292c2f; text-decoration: underline;">la Plage de Monsieur Hulot Saint-Marc</a> à partir de 14h30!
                                     </p>
                                 </div>
 
