--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -141,7 +141,7 @@
         </table>
     </main>
 
-    <footer class="footer-distributed">
+    <footer class="footer-distributed" id="footer-distri">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/bdsiutsn/social/instagram.html" target=”_blank”><i class="fa fa-instagram"></i></a>
