--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -110,7 +110,7 @@
         <h1><a href="/bdsiutsn/index.html" style="color: #292c2f;">Retour à l'Accueil</a></h1>
     </main>
 
-    <footer class="footer-distributed">
+    <footer class="footer-distributed" id="footer-distri">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/bdsiutsn/social/instagram.html" target=”_blank”><i class="fa fa-instagram"></i></a>
