--- a/contact.html
+++ b/contact.html
@@ -45,13 +45,13 @@
 
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
-            <a class="logo" href="/bdsiutsn/index.html">
+            <a class="logo" href="/bdsiutsn/">
                 <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="/bdsiutsn/index.html">Accueil</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/">Accueil</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -60,11 +60,11 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/actus.html">Evènements à
+                                        <a class="dropdown-link" href="/bdsiutsn/evenements/actus">Evènements à
                                             venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/inscription.html">S'inscrire
+                                        <a class="dropdown-link" href="/bdsiutsn/evenements/inscription">S'inscrire
                                             aux évènements</a>
                                     </li>
                                 </ul>
@@ -79,12 +79,12 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes">Classements
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion.html">Classements
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion">Classements
                                             des
                                             promotions</a>
                                     </li>
@@ -168,8 +168,8 @@
     <footer class="footer-distributed">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
-            <a href="/bdsiutsn/social/instagram.html" target=”_blank”><i class="fa fa-instagram"></i></a>
-            <a href="/bdsiutsn/social/linkedin.html" target=”_blank”><i class="fa fa-linkedin"></i></a>
+            <a href="/bdsiutsn/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
+            <a href="/bdsiutsn/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
 
         </div>
 
