--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
-            <a class="logo" href="/bdsiutsn/index.html">
+            <a class="logo" href="/bdsiutsn/">
                 <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
@@ -60,11 +60,11 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/actus.html">Evènements à
+                                        <a class="dropdown-link" href="/bdsiutsn/evenements/actus">Evènements à
                                             venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/inscription.html">S'inscrire
+                                        <a class="dropdown-link" href="/bdsiutsn/evenements/inscription">S'inscrire
                                             aux évènements</a>
                                     </li>
                                 </ul>
@@ -79,19 +79,19 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes">Classements
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion.html">Classements
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion">Classements
                                             des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/bdsiutsn/contact.html">Contact</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -144,7 +144,7 @@
             <li style="text-indent: 25px;">
                 Le site va permettre au BDS d’impliquer plus facilement les étudiants à participer aux évènements
                 sportifs en renforçant le côté compétitif de celui-ci. La rubrique <a class="missions-suaps"
-                href="/bdsiutsn/classements/equipes.html"
+                href="/bdsiutsn/classements/equipes"
                 target=”_blank”>Classement</a> sera utiliser pour suivre l’avancer de chaque équipe.
             </li>
         </div>
@@ -348,8 +348,8 @@
     <footer class="footer-distributed" id="footer-distri">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
-            <a href="/bdsiutsn/social/instagram.html" target=”_blank”><i class="fa fa-instagram"></i></a>
-            <a href="/bdsiutsn/social/linkedin.html" target=”_blank”><i class="fa fa-linkedin"></i></a>
+            <a href="/bdsiutsn/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
+            <a href="/bdsiutsn/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
 
         </div>
 
