--- a/evenements/actus.html
+++ b/evenements/actus.html
@@ -47,13 +47,13 @@
 <body>
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
-            <a class="logo" href="/bdsiutsn/">
+            <a class="logo" href="./">
                 <img src="../img/bds-logo-shark.png" class="shark" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="/bdsiutsn/">Accueil</a></li>
+                        <li><a class="nav-link" href="./">Accueil</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -65,7 +65,7 @@
                                         <a class="dropdown-link" href="#">Evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/inscription">S'inscrire
+                                        <a class="dropdown-link" href="/evenements/inscription">S'inscrire
                                             aux évènements</a>
                                     </li>
                                 </ul>
@@ -80,12 +80,12 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes">Classements
+                                        <a class="dropdown-link" href="/classements/equipes">Classements
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion">Classements
+                                        <a class="dropdown-link" href="/classements/promotion">Classements
                                             des
                                             promotions</a>
                                     </li>
@@ -93,7 +93,7 @@
                             </div>
 
                         </li>
-                        <li><a class="nav-link" href="/bdsiutsn/contact">Contact</a></li>
+                        <li><a class="nav-link" href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -249,8 +249,8 @@
     <footer class="footer-distributed">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
-            <a href="/bdsiutsn/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
-            <a href="/bdsiutsn/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
+            <a href="/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
+            <a href="/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
             </a>
         </div>
 
