--- a/success.html
+++ b/success.html
@@ -43,13 +43,13 @@
 <body>
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
-            <a class="logo" href="/bdsiutsn/">
+            <a class="logo" href="./">
                 <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="/bdsiutsn/">Accueil</a></li>
+                        <li><a class="nav-link" href=./">Accueil</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -58,10 +58,10 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/actus">Evènements à venir</a>
+                                        <a class="dropdown-link" href="/evenements/actus">Evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/inscription">S'inscrire aux évènements</a>
+                                        <a class="dropdown-link" href="/evenements/inscription">S'inscrire aux évènements</a>
                                     </li>
                                 </ul>
                             </div>
@@ -75,19 +75,19 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes">Classements
+                                        <a class="dropdown-link" href="/classements/equipes">Classements
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion">Classements
+                                        <a class="dropdown-link" href="/classements/promotion">Classements
                                             des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/bdsiutsn/contact">Contact</a></li>
+                        <li><a class="nav-link" href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -111,7 +111,7 @@
             <br></br>
             <h2 class="zdpjvzelk">Nous vous renverrons un message de confirmation concernant votre inscription !</h2>
             <br></br>
-            <p><a href="/bdsiutsn/" style="color: #292c2f; ">Retour à l'Accueil</a></p>
+            <p><a href="/" style="color: #292c2f; ">Retour à l'Accueil</a></p>
         </div>
         </div>
     </main>
@@ -119,8 +119,8 @@
     <footer class="footer-distributed" id="footer-distri">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
-            <a href="/bdsiutsn/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
-            <a href="/bdsiutsn/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
+            <a href="/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
+            <a href="/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
             </a>
         </div>
 
