--- a/evenements/inscription.html
+++ b/evenements/inscription.html
@@ -43,13 +43,13 @@
 <body>
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
-            <a class="logo" href="/bdsiutsn/">
+            <a class="logo" href="./">
                 <img src="../img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="/bdsiutsn/">Accueil</a></li>
+                        <li><a class="nav-link" href="./">Accueil</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -58,7 +58,7 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/actus">Evènements à venir</a>
+                                        <a class="dropdown-link" href="/evenements/actus">Evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="#">S'inscrire aux évènements</a>
@@ -75,12 +75,12 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes">Classements
+                                        <a class="dropdown-link" href="/classements/equipes">Classements
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion">Classements
+                                        <a class="dropdown-link" href="/classements/promotion">Classements
                                             des
                                             promotions</a>
                                     </li>
@@ -88,7 +88,7 @@
                             </div>
 
                         </li>
-                        <li><a class="nav-link" href="/bdsiutsn/contact">Contact</a></li>
+                        <li><a class="nav-link" href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -116,7 +116,7 @@
 
                 <input type="hidden" name="_captcha" value="false">
 
-                <input type="hidden" name="_next" value="https://scorlay.github.io/bdsiutsn/success">
+                <input type="hidden" name="_next" value="https://scorlay.github.io/success">
 
                 <input type="hidden" name="_autoresponse"
                     value="Bonjour, nous vous confirmons la demande de participation au prochain évènement.">
@@ -133,7 +133,7 @@
                 <h6>Note: Si votre équipe est déjà inscrite auprès du BDS merci de ne pas renseigner le nom de
                     chaque
                     joueur mais uniquement le nom de l'équipe ! (Vous pouvez vérifier cela via le <a class="forma"
-                        style="color: #292c2f;" href="/bdsiutsn/classements/equipes" target="_blank">Classement
+                        style="color: #292c2f;" href="/classements/equipes" target="_blank">Classement
                         des
                         équipes</a>)
                 </h6>
@@ -145,8 +145,8 @@
     <footer class="footer-distributed">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
-            <a href="/bdsiutsn/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
-            <a href="/bdsiutsn/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
+            <a href="/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
+            <a href="/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
             </a>
         </div>
 
