--- a/contact.html
+++ b/contact.html
@@ -45,13 +45,13 @@
 
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
-            <a class="logo" href="./">
+            <a class="logo" href="/">
                 <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="./">Accueil</a></li>
+                        <li><a class="nav-link" href="/">Accueil</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
