--- a/evenements/inscription.html
+++ b/evenements/inscription.html
@@ -110,8 +110,9 @@
             <div class="titles">
                 <h3>S'inscrire pour le prochain évènement</h3>
             </div>
-            <form action="https://formsubmit.co/stefan.corlay@gmail.com" method="POST"
-                onsubmit="sendEmail(); reset(); return false;" id="wrapper">
+
+            <!--onsubmit="sendEmail(); reset(); return false;"-->
+            <form action="https://formsubmit.co/stefan.corlay@gmail.com" method="POST" id="wrapper">
                 <input type="text" name="_honey" style="display: none;">
                 
 
