--- a/evenements/inscription.html
+++ b/evenements/inscription.html
@@ -35,8 +35,7 @@
     <meta property="og:site_name" content="Bureau des Sports IUT Saint-Nazaire">
     <meta name="og:image" content="">
     <meta name="og:image:width" content="">
-    <meta name="og:image:height" content="">
-
+    <meta name="og:image:height" content=""
 </head>
 
 
@@ -115,10 +114,11 @@
             <form action="https://formsubmit.co/stefan.corlay@gmail.com" method="POST" id="wrapper">
                 <input type="text" name="_honey" style="display: none;">
                 
+                <input type="hidden" name="_url" value="https://bdsiutsn.fr/success">
 
                 <input type="hidden" name="_captcha" value="false">
 
-                <input type="hidden" name="_next" value="https://scorlay.github.io/success">
+                <input type="hidden" name="_next" value="https://bdsiutsn.fr/success">
 
                 <input type="hidden" name="_autoresponse"
                     value="Bonjour, nous vous confirmons la demande de participation au prochain évènement.">
