--- a/evenements/inscription.html
+++ b/evenements/inscription.html
@@ -35,8 +35,7 @@
     <meta property="og:site_name" content="Bureau des Sports IUT Saint-Nazaire">
     <meta name="og:image" content="">
     <meta name="og:image:width" content="">
-    <meta name="og:image:height" content=""
-</head>
+    <meta name="og:image:height" content="" </head>
 
 
 <body>
@@ -113,7 +112,7 @@
             <!--onsubmit="sendEmail(); reset(); return false;"-->
             <form action="https://formsubmit.co/eaf3e07df943384d3a5bd24b497ec958" method="POST" id="wrapper">
                 <input type="text" name="_honey" style="display: none;">
-                
+
                 <input type="hidden" name="_url" value="https://bdsiutsn.fr/success">
 
                 <input type="hidden" name="_captcha" value="false">
@@ -139,8 +138,8 @@
                         des
                         équipes</a>)
                 </h6>
-        </div>
-        </form>
+
+            </form>
         </div>
     </main>
 
