--- a/success-contact.html
+++ b/success-contact.html
@@ -11,7 +11,6 @@
     <link href="./table/jquery.dataTables.css" rel="stylesheet" />
     <link href="./table/jquery-ui.js" />
     <link href="./css/footer.css" rel="stylesheet" />
-    <link href="./css/contact.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <meta charset="UTF-8">
@@ -24,10 +23,10 @@
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Accueil</title>
+    <title>BDS - Contact</title>
     <meta name="description" content="">
 
-    <meta name="author" content="Stéfan CORLAY">
+    <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
     <meta name="country" content="France">
     <meta name="geo.country" content="FR">
 
@@ -40,10 +39,8 @@
 
 </head>
 
-<!--<div class="spacer" data-height="1000"></div>-->
 
 <body>
-
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
@@ -52,7 +49,7 @@
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="/">Accueil</a></li>
+                        <li><a class="nav-link" href=/">Accueil</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -61,12 +58,10 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/actus">Evènements à
-                                            venir</a>
+                                        <a class="dropdown-link" href="/evenements/actus">Evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/inscription">S'inscrire
-                                            aux évènements</a>
+                                        <a class="dropdown-link" href="/evenements/inscription">S'inscrire aux évènements</a>
                                     </li>
                                 </ul>
                             </div>
@@ -92,7 +87,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="#">Contact</a></li>
+                        <li><a class="nav-link" href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -111,98 +106,22 @@
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
         <div class="containers">
-            <div class="titles">
-                <h3>Contactez nous !</h3>
-            </div>
-
-            <!--onsubmit="sendEmail(); reset(); return false;"-->
-            <form action="https://formsubmit.co/eaf3e07df943384d3a5bd24b497ec958" method="POST" id="wrapper">
-                <input type="text" name="_honey" style="display: none;">
-
-                <input type="hidden" name="_url" value="https://bdsiutsn.fr/success-contact">
-
-                <input type="hidden" name="_captcha" value="false">
-
-                <input type="hidden" name="_next" value="https://bdsiutsn.fr/success-contact">
-
-                <input type="hidden" name="_autoresponse"
-                    value="Bonjour, nous vous confirmons que nous avons reçu votre demande.">
-
-                <input id="name" type="text" name="Nom-Prenom" placeholder="Nom - prénom" required="">
-                <input id="email" type="email" name="Email" placeholder="Votre email" required="">
-                <input id="number" type="tel" name="Numéro&nbsp;de&nbsp;téléphone"
-                    placeholder="Votre numéro de téléphone" required="">
-                <input id="subject" type="text" name="Sujet-demande" placeholder="Sujet de votre demande"
-                    required="">
-                <textarea name="Demande"
-                    placeholder="Indiquez nous votre demande"></textarea>
-                <button type="submit">Envoyer</button>
-
-            </form>
-        </div>
-
-        <br></br>
-
-        <div class="titless">
-            <h3>Ou bien contactez notre équipe !</h3>
-        </div>
-
-        <!--
-        <nav class="nav-contact">
-            <label for="touch"><span>Président</span></label>
-            <input type="checkbox" id="touch">
-
-            <ul class="slide">
-                <li class="contact"><a href="https://www.linkedin.com/in/stefan-corlay/" target="_blank">Stéfan CORLAY</a></li>
-                <li class="contact"><a class="missions-suaps" href="tel:+330781510900" target=”_blank”>+330781510900</a>
-                </li>
-                <li class="contact">
-                    <a class="missions-suaps" href="mailto:stefan.corlay@etu.univ-nantes.fr"
-                        target=”_blank”>stefan.corlay@etu.univ-nantes.fr</a>
-                </li>
-            </ul>
-
+            <div class="title"></div>
+            <h3 class="zdpjvzelk">Merci pour votre demande !</h3>
             <br></br>
-
-            <label for="touchs"><span>Trésorier</span></label>
-            <input type="checkbox" id="touchs">
-
-            <ul class="slide">
-                <li class="contact"><a href="https://www.linkedin.com/in/mahmoud-habib-639465256/" target="_blank">Mahmoud HABIB</a></li>
-                <li class="contact">
-                    <a class="missions-suaps" href="tel:+330664629106" target=”_blank”>+330664629106</a>
-                </li>
-                <li class="contact">
-                    <a class="missions-suaps" href="mailto:mahmoud.habib@etu.univ-nantes.fr"
-                        target=”_blank”>mahmoud.habib@etu.univ-nantes.fr</a>
-                </li>
-            </ul>
-
+            <h2 class="zdpjvzelk">Nous vous répondrons par mail incéssamment sous peu !</h2>
             <br></br>
-
-            <label for="touchss"><span>Secrétaire</span></label>
-            <input type="checkbox" id="touchss">
-
-            <ul class="slide">
-                <li class="contact"><a href="https://www.linkedin.com/in/ma%C3%AFlys-gouret-151626250/" target="_blank">Mailys GOURET</a></li>
-                <li class="contact">
-                    <a class="missions-suaps" href="tel:+330768181228" target=”_blank”>+330768181228</a>
-                </li>
-                <li class="contact">
-                    <a class="missions-suaps" href="mailto:mailys.gouret@etu.univ-nantes.fr"
-                        target=”_blank”>mailys.gouret@etu.univ-nantes.fr</a>
-                </li>
-            </ul>
-        </nav>
-        -->
+            <p><a href="/" style="color: #292c2f; ">Retour à l'Accueil</a></p>
+        </div>
+        </div>
     </main>
 
-    <footer class="footer-distributed">
+    <footer class="footer-distributed" id="footer-distri">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
             <a href="/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
-
+            </a>
         </div>
 
         <div class="footer-left">
