--- a/contact.html
+++ b/contact.html
@@ -132,10 +132,8 @@
                 <input id="email" type="email" name="Email" placeholder="Votre email" required="">
                 <input id="number" type="tel" name="Numéro&nbsp;de&nbsp;téléphone"
                     placeholder="Votre numéro de téléphone" required="">
-                <input id="subject" type="text" name="Sujet-demande" placeholder="Sujet de votre demande"
-                    required="">
-                <textarea name="Demande"
-                    placeholder="Indiquez nous votre demande"></textarea>
+                <input id="subject" type="text" name="Sujet-demande" placeholder="Sujet de votre demande" required="">
+                <textarea name="Demande" placeholder="Indiquez nous votre demande"></textarea>
                 <button type="submit">Envoyer</button>
 
             </form>
@@ -144,57 +142,60 @@
         <br></br>
 
         <div class="titless">
-            <h3>Ou bien contactez notre équipe !</h3>
+            <h3>Ou bien contactez les membres du Bureau !</h3>
         </div>
 
-        <!--
-        <nav class="nav-contact">
-            <label for="touch"><span>Président</span></label>
-            <input type="checkbox" id="touch">
+        <br></br>
 
-            <ul class="slide">
-                <li class="contact"><a href="https://www.linkedin.com/in/stefan-corlay/" target="_blank">Stéfan CORLAY</a></li>
-                <li class="contact"><a class="missions-suaps" href="tel:+330781510900" target=”_blank”>+330781510900</a>
-                </li>
-                <li class="contact">
-                    <a class="missions-suaps" href="mailto:stefan.corlay@etu.univ-nantes.fr"
-                        target=”_blank”>stefan.corlay@etu.univ-nantes.fr</a>
-                </li>
+        <section class="nav-contact">
+            <ul class="all-ul">
+                <label for="touch"><span>Président</span></label>
+                <input type="checkbox" id="touch">
+                <ul class="slide">
+                    <li class="contact"><a href="https://www.linkedin.com/in/stefan-corlay/" target="_blank">Stéfan
+                            CORLAY</a></li>
+                    <li class="contact"><a class="missions-suaps" href="tel:+330781510900"
+                            target=”_blank”>+330781510900</a>
+                    </li>
+                    <li class="contact">
+                        <a class="missions-suaps" href="mailto:stefan.corlay@etu.univ-nantes.fr"
+                            target=”_blank”>stefan.corlay@etu.univ-nantes.fr</a>
+                    </li>
+                </ul>
+
+                <label for="touchs"><span>Trésorier</span></label>
+                <input type="checkbox" id="touchs">
+                <ul class="slide">
+                    <li class="contact"><a href="https://www.linkedin.com/in/mahmoud-habib-639465256/"
+                            target="_blank">Mahmoud HABIB</a></li>
+                    <li class="contact">
+                        <a class="missions-suaps" href="tel:+330664629106" target=”_blank”>+330664629106</a>
+                    </li>
+                    <li class="contact">
+                        <a class="missions-suaps" href="mailto:mahmoud.habib@etu.univ-nantes.fr"
+                            target=”_blank”>mahmoud.habib@etu.univ-nantes.fr</a>
+                    </li>
+                </ul>
             </ul>
+        </section>
 
-            <br></br>
-
-            <label for="touchs"><span>Trésorier</span></label>
-            <input type="checkbox" id="touchs">
-
-            <ul class="slide">
-                <li class="contact"><a href="https://www.linkedin.com/in/mahmoud-habib-639465256/" target="_blank">Mahmoud HABIB</a></li>
-                <li class="contact">
-                    <a class="missions-suaps" href="tel:+330664629106" target=”_blank”>+330664629106</a>
-                </li>
-                <li class="contact">
-                    <a class="missions-suaps" href="mailto:mahmoud.habib@etu.univ-nantes.fr"
-                        target=”_blank”>mahmoud.habib@etu.univ-nantes.fr</a>
-                </li>
+        <section class="nav-contacts">
+            <ul class="all-ul">
+                <label for="touchss"><span>Secrétaire</span></label>
+                <input type="checkbox" id="touchss">
+                <ul class="slide">
+                    <li class="contact"><a href="https://www.linkedin.com/in/ma%C3%AFlys-gouret-151626250/"
+                            target="_blank">Mailys GOURET</a></li>
+                    <li class="contact">
+                        <a class="missions-suaps" href="tel:+330768181228" target=”_blank”>+330768181228</a>
+                    </li>
+                    <li class="contact">
+                        <a class="missions-suaps" href="mailto:mailys.gouret@etu.univ-nantes.fr"
+                            target=”_blank”>mailys.gouret@etu.univ-nantes.fr</a>
+                    </li>
+                </ul>
             </ul>
-
-            <br></br>
-
-            <label for="touchss"><span>Secrétaire</span></label>
-            <input type="checkbox" id="touchss">
-
-            <ul class="slide">
-                <li class="contact"><a href="https://www.linkedin.com/in/ma%C3%AFlys-gouret-151626250/" target="_blank">Mailys GOURET</a></li>
-                <li class="contact">
-                    <a class="missions-suaps" href="tel:+330768181228" target=”_blank”>+330768181228</a>
-                </li>
-                <li class="contact">
-                    <a class="missions-suaps" href="mailto:mailys.gouret@etu.univ-nantes.fr"
-                        target=”_blank”>mailys.gouret@etu.univ-nantes.fr</a>
-                </li>
-            </ul>
-        </nav>
-        -->
+        </section>
     </main>
 
     <footer class="footer-distributed">
