--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -107,7 +107,7 @@
     </header>
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
-        <h1><a href="./" style="color: #292c2f;">Retour à l'Accueil</a></h1>
+        <h1><a href="https://bdsiutsn.fr" style="color: #292c2f;">Retour à l'Accueil</a></h1>
     </main>
 
     <footer class="footer-distributed" id="footer-distri">
