--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Accueil</title>
+    <title>Bureau des Sports IUT Saint-Nazaire</title>
     <meta name="description" content="">
 
     <meta name="author" content="Stéfan CORLAY">
