--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
     <title>Bureau des Sports IUT Saint-Nazaire</title>
-    <meta name="description" content="">
+    <meta name="description" content="Le Bureau des Sports de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
 
     <meta name="author" content="Stéfan CORLAY">
     <meta name="country" content="France">
