--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <title>Bureau des Sports IUT Saint-Nazaire</title>
     <meta name="description" content="Le Bureau des Sports de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
-
+<meta name="keywords" content="BDS, IUT, SN, IUT Saint-Nazaire, Saint-Nazaire, Bureau des Sports, MLT, TC, GLT, IUT SN, BDS IUT SN, BDS IUT, BDS SN, bdsiutsn, GC, GIM, MP, GCGP, bds.iut.sn, BDS IUT Saint-Nazaire">
     <meta name="author" content="Stéfan CORLAY">
     <meta name="country" content="France">
     <meta name="geo.country" content="FR">
