--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -26,7 +26,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
     <title>BDS - Equipes</title>
-    <meta name="description" content="">
+    <meta name="description" content="Le BDS de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
 
     <meta name="author" content="Stéfan CORLAY">
     <meta name="country" content="France">
