--- a/evenements/inscription.html
+++ b/evenements/inscription.html
@@ -24,7 +24,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
     <title>BDS - Inscription</title>
-    <meta name="description" content="">
+    <meta name="description" content="Le BDS de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
 
     <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
     <meta name="country" content="France">
