--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
     <title>Bureau des Sports IUT Saint-Nazaire</title>
-    <meta name="description" content="Le Bureau des Sports de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
-<meta name="keywords" content="BDS, IUT, SN, IUT Saint-Nazaire, Saint-Nazaire, Bureau des Sports, MLT, TC, GLT, IUT SN, BDS IUT SN, BDS IUT, BDS SN, bdsiutsn, GC, GIM, MP, GCGP, bds.iut.sn, BDS IUT Saint-Nazaire">
+    <meta name="description"
+        content="Le Bureau des Sports de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
+    <meta name="keywords"
+        content="BDS, IUT, SN, IUT Saint-Nazaire, Saint-Nazaire, Bureau des Sports, MLT, TC, GLT, IUT SN, BDS IUT SN, BDS IUT, BDS SN, bdsiutsn, GC, GIM, MP, GCGP, bds.iut.sn, BDS IUT Saint-Nazaire">
     <meta name="author" content="Stéfan CORLAY">
     <meta name="country" content="France">
     <meta name="geo.country" content="FR">
@@ -41,11 +43,11 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGP41PJSW"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-2MGP41PJSW');
+    gtag('config', 'G-2MGP41PJSW');
 </script>
 <!--<div class="spacer" data-height="1000"></div>-->
 
@@ -152,13 +154,13 @@
             <li style="text-indent: 25px;">
                 Le site va permettre au BDS d’impliquer plus facilement les étudiants à participer aux évènements
                 sportifs en renforçant le côté compétitif de celui-ci. La rubrique <a class="missions-suaps"
-                href="/classements/equipes"
-                target=”_blank”>Classement</a> sera utiliser pour suivre l’avancer de chaque équipe.
+                    href="/classements/equipes" target=”_blank”>Classement</a> sera utiliser pour suivre l’avancer de
+                chaque équipe.
             </li>
         </div>
 
         <br></br>
-        
+
         <!--<div class="instagram-widget">
             <div class="instagram-widget1">
                 <blockquote class="instagram-media" data-instgrm-captioned
