--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    <header id="nav-menu" aria-label="navigation bar">
+    <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto; max-width: 1300px;" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="https://bdsiutsn.fr">
                 <img src="../img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
@@ -59,10 +59,10 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/actus">Evènements à venir</a>
+                                        <a class="dropdown-link" href="/evenements/actus" style="color: #292c2f;">Evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/inscription">S'inscrire aux évènements</a>
+                                        <a class="dropdown-link" href="/evenements/inscription" style="color: #292c2f;">S'inscrire aux évènements</a>
                                     </li>
                                 </ul>
                             </div>
@@ -76,12 +76,12 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes">Classements
+                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classements
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#">Classements des
+                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Classements des
                                             promotions</a>
                                     </li>
                                 </ul>
@@ -110,17 +110,17 @@
         <h1><a href="https://bdsiutsn.fr" style="color: #292c2f;">Retour à l'Accueil</a></h1>
     </main>
 
-    <footer class="footer-distributed" id="footer-distri">
+    <footer class="footer-distributed" style="padding: 1.5rem; margin: 0 auto; max-width: 1300px;">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
             <a href="/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
+            </a>
         </div>
 
         <div class="footer-left">
-            <p>Site du Bureau des Sports de l'IUT de Saint-Nazaire développé par Stéfan CORLAY</p>
+            <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;" ></i><b style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
         </div>
-
 
     </footer>
 </body>
