--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="./table/jquery.dataTables.css" rel="stylesheet" />
     <link href="./table/jquery-ui.js" />
     <link href="./css/footer.css" rel="stylesheet" />
+    <link href="./css/css.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel=" stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <meta charset="UTF-8">
@@ -70,11 +73,11 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/actus">Evènements à
+                                        <a class="dropdown-link" href="/evenements/actus" style="color: #292c2f;">Evènements à
                                             venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/inscription">S'inscrire
+                                        <a class="dropdown-link" href="/evenements/inscription" style="color: #292c2f;">S'inscrire
                                             aux évènements</a>
                                     </li>
                                 </ul>
@@ -89,12 +92,12 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes">Classements
+                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classements
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/promotion">Classements
+                                        <a class="dropdown-link" href="/classements/promotion" style="color: #292c2f;">Classements
                                             des
                                             promotions</a>
                                     </li>
@@ -161,6 +164,7 @@
 
         <br></br>
 
+        
         <!--<div class="instagram-widget">
             <div class="instagram-widget1">
                 <blockquote class="instagram-media" data-instgrm-captioned
@@ -355,19 +359,26 @@
 
     </main>
 
-    <footer class="footer-distributed" id="footer-distri">
+    <footer class="footer-distributed" style="padding: 1.5rem; margin: 0 auto; max-width: 1300px;">
         <div class="footer-right">
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/social/instagram" target=”_blank”><i class="fa fa-instagram"></i></a>
             <a href="/social/linkedin" target=”_blank”><i class="fa fa-linkedin"></i></a>
-
+            </a>
         </div>
 
         <div class="footer-left">
-            <p>Site du Bureau des Sports de l'IUT de Saint-Nazaire développé par Stéfan CORLAY</p>
+            <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;" ></i><b style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
         </div>
 
     </footer>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.sticky-sidebar.min.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
