--- a/reseau.html
+++ b/reseau.html
@@ -45,19 +45,19 @@
             <div class="s-icon">
                 <i class="fa fa-instagram"></i>
             </div>
-            <Span><a href="https://www.instagram.com/bds.iut.sn/" target=”_blank”>Instagram</a></Span>
+            <Span><a href="/social/instagram" target=”_blank”>Instagram</a></Span>
         </div>
         <div class="button">
             <div class="s-icon">
                 <i class="fa fa-linkedin"></i>
             </div>
-            <span><a href="https://www.linkedin.com/company/bds-iut-sn/" target=”_blank”>Linkedin</a></span>
+            <span><a href="/social/linkedin" target=”_blank”>Linkedin</a></span>
         </div>
         <div class="button">
             <div class="s-icon">
                 <i class="fa fa-sign-in"></i>
             </div>
-            <span><a href="https://forms.gle/j3dc8SBZt1ycR7PF8" target=”_blank”>Inscription bds</a></span>
+            <span><a href="/social/inscription" target=”_blank”>Inscription bds</a></span>
         </div>
         <div class="button">
             <div class="s-icon">
